<resources>
    <string name="app_name">Interval</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_reminder">Reminders</string>
    <string name="title_tracker">Trackers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="reminder_provider">net.tbp.interval.mycontentprovider.ReminderInfo</string>
    <string name="calendar_provider">net.tbp.interval.mycontentprovider.CalendarInfo</string>
    <string name="user_provider">net.tbp.interval.mycontentprovider.UserInfo</string>




    <string-array name="AmPm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>